--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#808080</color>
+    <color name="medium_grey">#b3b3b3</color>
+    <color name="light_grey">#cccccc</color>
+    <color name="vinous">#9b2d30</color>
 </resources>
