--- a/app/src/main/res/layouts/tobuylist/layout/activity_tobuy.xml
+++ b/app/src/main/res/layouts/tobuylist/layout/activity_tobuy.xml
@@ -2,7 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".tobuy.ToBuyActivity">
+
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_toBuy"
@@ -11,5 +14,6 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
