--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/toBuyFragment"
-        android:name="com.example.myapplication.tobuy.ToBuyFragment"
+        android:name="com.example.kitchenhelperkotlin.tobuy.ToBuyFragment"
         android:label="fragment_tobuy"
         tools:layout="@layout/fragment_tobuy" />
 </navigation>
