--- a/app/src/main/res/layouts/tobuylist/layout/tobuy_item.xml
+++ b/app/src/main/res/layouts/tobuylist/layout/tobuy_item.xml
@@ -24,8 +24,8 @@
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
-        tools:text="Example Item"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        tools:text="Example Item" />
 
     <TextView
         android:id="@+id/tobuyAmount"
@@ -34,10 +34,11 @@
         android:layout_alignTop="@+id/cbCompleted"
         android:layout_alignBottom="@+id/cbCompleted"
         android:layout_marginHorizontal="8dp"
-        android:layout_toStartOf="@+id/tobuyPriority"
+        android:layout_marginEnd="50dp"
+        android:layout_alignParentEnd="true"
         android:gravity="center_vertical"
-        tools:text="Amount"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        tools:text="Amount" />
 
     <ImageView
         android:id="@+id/tobuyPriority"
