--- a/app/src/main/res/menu/fragment_tobuy_menu.xml
+++ b/app/src/main/res/menu/fragment_tobuy_menu.xml
@@ -4,12 +4,12 @@
 
     <item
         android:id="@+id/actionSearch"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_search_white"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
     <item
-        android:icon="@drawable/ic_sort"
+        android:icon="@drawable/ic_sort_white"
         android:title="@string/sort"
         app:showAsAction="always">
         <menu>
