--- a/app/src/main/res/layouts/products/layout/fragment_products.xml
+++ b/app/src/main/res/layouts/products/layout/fragment_products.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".products.ProductsFragment">
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/testButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ProductFragment"
+        android:text="Product_Fragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
