--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,23 +36,8 @@
     <fragment
         android:id="@+id/productsFragment"
         android:name="com.example.kitchenhelperkotlin.products.ProductsFragment"
-        android:label="fragment_products"
-        tools:layout="@layout/fragment_products" >
-        <action
-            android:id="@+id/action_productsFragment_to_notificationFragment"
-            app:destination="@id/notificationFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
-        <action
-            android:id="@+id/action_productsFragment_to_toBuyFragment"
-            app:destination="@id/toBuyFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
-    </fragment>
+        android:label="@string/ProductsList"
+        tools:layout="@layout/fragment_products" />
     <fragment
         android:id="@+id/notificationFragment"
         android:name="com.example.kitchenhelperkotlin.notifications.NotificationFragment"
