--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,19 +5,19 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_products"
+            android:id="@+id/productsFragment"
             android:icon="@drawable/ic_products"
             android:title="@string/ProductsList" />
         <item
-            android:id="@+id/nav_recipe"
+
             android:icon="@drawable/ic_recipe_book"
             android:title="@string/recipeBook" />
         <item
-            android:id="@+id/nav_toBuyList"
+            android:id="@+id/toBuyFragment"
             android:icon="@drawable/ic_to_buy_list"
             android:title="@string/ToBuyList" />
         <item
-            android:id="@+id/nav_notification"
+            android:id="@+id/notificationFragment"
             android:icon="@drawable/ic_notification"
             android:title="@string/notifications" />
     </group>
@@ -25,11 +25,11 @@
         <menu>
             <group android:checkableBehavior="single">
                 <item
-                    android:id="@+id/nav_settings"
+
                     android:icon="@drawable/ic_settings"
                     android:title="@string/settings" />
                 <item
-                    android:id="@+id/nav_help"
+
                     android:icon="@drawable/ic_question"
                     android:title="@string/help" />
             </group>
