--- a/app/src/main/res/layouts/products/layout/fragment_add_edit_products.xml
+++ b/app/src/main/res/layouts/products/layout/fragment_add_edit_products.xml
@@ -57,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:hint="@string/amount"
+            android:textAlignment="center"
             android:inputType="number"
             android:textColor="@color/black"
             android:textSize="24sp"
