--- a/app/src/main/res/layouts/tobuylist/layout/fragment_add_edit_tobuy.xml
+++ b/app/src/main/res/layouts/tobuylist/layout/fragment_add_edit_tobuy.xml
@@ -10,6 +10,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/titleInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginHorizontal="36dp"
+            android:layout_marginTop="16dp"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/eToBuyTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/name"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/amountInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:errorEnabled="true"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="18dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout"
+            app:layout_constraintEnd_toStartOf="@+id/cbImportant">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/eToBuyAmount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/amount"
+                android:inputType="number"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--
         <EditText
             android:id="@+id/eToBuyTitle"
             android:layout_width="match_parent"
@@ -34,17 +78,17 @@
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/eToBuyTitle" />
+        -->
 
         <CheckBox
             android:id="@+id/cbImportant"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
+            android:layout_marginHorizontal="36dp"
             android:layout_marginTop="8dp"
             android:text="@string/important"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/eToBuyAmount"
-            app:layout_constraintTop_toBottomOf="@+id/eToBuyTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
