Notification. The responsibilities are divided into the bottom sheet and the bottom sheet view model

--- a/app/src/main/res/layouts/notifications/layout/create_notification_bottom_sheet.xml
+++ b/app/src/main/res/layouts/notifications/layout/create_notification_bottom_sheet.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -21,22 +22,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="18dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="54dp"
         android:text="@string/addToList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionText" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
         android:layout_marginEnd="18dp"
         app:endIconDrawable="@drawable/ic_clock_grey"
         app:endIconMode="custom"
         app:layout_constraintEnd_toStartOf="@+id/bAddNotification"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionText">
+        app:layout_constraintTop_toBottomOf="@+id/cbShowOnNextDay">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/eSelectTime"
@@ -46,5 +47,13 @@
             android:focusable="false"
             android:hint="@string/timeNotification" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <CheckBox
+        android:id="@+id/cbShowOnNextDay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/showOnNextDay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
