Design. Cosmetic changes

--- a/app/src/main/res/layouts/products/layout/fragment_add_edit_products.xml
+++ b/app/src/main/res/layouts/products/layout/fragment_add_edit_products.xml
@@ -50,64 +50,59 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!--
-          <EditText
-              android:id="@+id/eProductTitle"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginHorizontal="36dp"
-              android:layout_marginTop="16dp"
-              android:backgroundTint="@color/black"
-              android:hint="@string/name"
-              android:textSize="24sp"
-              android:minHeight="48dp"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent" />
-
-          <EditText
-              android:id="@+id/eProductAmount"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="24dp"
-              android:hint="@string/amount"
-              android:textAlignment="center"
-              android:inputType="number"
-              android:textColor="@color/black"
-              android:textSize="24sp"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintHorizontal_bias="0.5"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@+id/bExpirationDate" />
-  -->
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
-            android:text="@string/ExpirationDate"
-            android:textColor="@color/black"
-            android:textSize="24sp"
+            android:layout_marginHorizontal="36dp"
+            app:endIconDrawable="@drawable/ic_calendar_grey"
+            app:endIconMode="custom"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.067"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/amountInputLayout" />
-
-        <Button
-            android:id="@+id/bExpirationDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="28dp"
-            android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.6"
-            app:layout_constraintStart_toEndOf="@+id/textView8"
             app:layout_constraintTop_toBottomOf="@+id/amountInputLayout"
-            tools:text="date" />
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.6">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/bExpirationDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="true"
+                android:focusable="false"
+                android:hint="@string/ExpirationDate" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+        <!--
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="28dp"
+                    android:text="@string/ExpirationDate"
+                    android:textColor="@color/black"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.067"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/amountInputLayout" />
+
+
+
+                <Button
+                    android:id="@+id/bExpirationDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="28dp"
+                    android:minHeight="48dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.6"
+                    app:layout_constraintStart_toEndOf="@+id/textView8"
+                    app:layout_constraintTop_toBottomOf="@+id/amountInputLayout"
+                    tools:text="date" />
+        -->
 
         <!-- TODO: Создать поле и кнопку для считывания штрих кода -->
 
