--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -21,7 +21,7 @@
         <menu>
             <group android:checkableBehavior="single">
                 <item
-
+                    android:id="@+id/settingsFragment"
                     android:icon="@drawable/ic_settings"
                     android:title="@string/settings" />
                 <item
