--- a/app/src/main/res/layouts/products/layout/fragment_products.xml
+++ b/app/src/main/res/layouts/products/layout/fragment_products.xml
@@ -18,7 +18,7 @@
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:contentDescription="@string/AddNewProduct"
+        android:contentDescription="@string/addNewProduct"
         android:src="@drawable/ic_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
