--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,15 +7,15 @@
         <item
             android:id="@+id/productsFragment"
             android:icon="@drawable/ic_products"
-            android:title="@string/ProductsList" />
+            android:title="@string/productsList" />
         <item
-
+            android:id="@+id/recipeFragment"
             android:icon="@drawable/ic_recipe_book"
             android:title="@string/recipeBook" />
         <item
             android:id="@+id/toBuyFragment"
             android:icon="@drawable/ic_to_buy_list"
-            android:title="@string/ToBuyList" />
+            android:title="@string/toBuyList" />
     </group>
     <item android:title="@string/additions">
         <menu>
