--- a/app/src/main/res/layouts/recipe/layout/recipe_item.xml
+++ b/app/src/main/res/layouts/recipe/layout/recipe_item.xml
@@ -12,7 +12,7 @@
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/productTitle"
+            android:id="@+id/recipeTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -24,10 +24,10 @@
             tools:text="Example item" />
 
         <TextView
-            android:id="@+id/note"
+            android:id="@+id/recipeNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/productTitle"
+            android:layout_below="@+id/recipeTitle"
             android:layout_alignParentStart="true"
             android:layout_marginTop="6dp"
             android:layout_toStartOf="@+id/recipeFavorite"
