--- a/app/src/main/res/layouts/settings/layout/fragment_settings.xml
+++ b/app/src/main/res/layouts/settings/layout/fragment_settings.xml
@@ -47,6 +47,15 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bClearAllProducts" />
+    <Button
+        android:id="@+id/bClearAllRecipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/clearRecipe"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bClearAllToBuy" />
 
     <View
         android:id="@+id/view"
@@ -56,6 +65,6 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bClearAllToBuy" />
+        app:layout_constraintTop_toBottomOf="@+id/bClearAllRecipe" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
